data/derived/comb/progs/unify/prog7164.ml.out
Characters 72-73:
  | h :: t -> h :: listReverse [t];;
              ^
Error: This expression has type 'a but an expression was expected of type
         'a list
       The type variable 'a occurs inside 'a list
